--- a/sass/compat/themes/woodmart/_order-summary.scss
+++ b/sass/compat/themes/woodmart/_order-summary.scss
@@ -2,7 +2,8 @@
 // FLYOUT ORDER SUMMARY
 // ------------------------------------
 
-.fc-checkout-order-review .woodmart-table-wrapper {
+.fc-checkout-order-review .woodmart-table-wrapper,
+.fc-checkout-order-review .wd-table-wrapper {
 	margin: 0;
 	padding: 0;
 	overflow: visible;
